<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:text="@string/created_by"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:text="@string/call_make"
        android:textAllCaps="true"
        />

    <TextView
        android:id="@+id/call_text"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"

        android:text="@string/call_none"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_margin="16dp"
        android:background="@android:color/darker_gray"
        />

    <EditText
        android:id="@+id/feedback_collect_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"

        android:hint="@string/feedback_hint"
        android:inputType="text"
        android:maxLines="1"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/feedback_collect_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:text="@string/feedback_send"
        android:textAllCaps="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"

        android:text="@string/feedback_label"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/feedback_date_one"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        android:text="@string/feedback_date_placeholder"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/feedback_content_one"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"

        android:text="@string/feedback_content_placeholder"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/feedback_date_two"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        android:text="@string/feedback_date_placeholder"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/feedback_content_two"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"

        android:text="@string/feedback_content_placeholder"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/feedback_date_three"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        android:text="@string/feedback_date_placeholder"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/feedback_content_three"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"

        android:text="@string/feedback_content_placeholder"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        />

</LinearLayout>
